--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3204,7 +3204,7 @@ repositories:
     source:
       type: git
       url: https://github.com/heron/heron.git
-  heron-desktop:
+  heron_desktop:
     doc:
       type: git
       url: https://github.com/heron/heron_desktop.git
